Bugfix/etsl-613 added rte classes,Bugfix/etsl-614 fixed tick mark css, alignment

--- a/ui.frontend/src/main/webpack/etisalat/styles/product-grid-text-section.scss
+++ b/ui.frontend/src/main/webpack/etisalat/styles/product-grid-text-section.scss
@@ -111,6 +111,7 @@
   }
   .paragraph-styling .p2 p {
     @include font-family-lato;
+    margin-right: toRem(16);
   }
   h4 {
     font-size: $font24;
@@ -4206,6 +4207,7 @@
   }
 }
 .productdetail {
+  padding: toRem(0);
   .tile {
     .tile-card__front {
       .view-channel-list {
